# MorpoEngine

./: .gitignore  CMakeLists.txt  run.sh
app/: Main.cpp
include/MorpoEngine/Core/: Application.hpp
include/MorpoEngine/ECS/: ComponentStorage.hpp  Components.hpp  Entity.hpp  Registry.hpp
include/MorpoEngine/Input/: Input.hpp
include/MorpoEngine/Renderer/: Renderer.hpp
include/MorpoEngine/Systems/: InputSystem.hpp
include/MorpoEngine/Window/: Window.hpp
src/MorpoEngine/Core/: Application.cpp
src/MorpoEngine/Input/: Input.cpp
src/MorpoEngine/Renderer/: Renderer.cpp
src/MorpoEngine/Systems/: InputSystem.cpp
src/MorpoEngine/Window/: Window.cpp
